Finished Assignment #6
